deployments/container/envoy.yaml
admin:
  access_log_path: /tmp/admin_access.log
  address:
    socket_address: { address: 0.0.0.0, port_value: 9901 }

static_resources:
  listeners:
    - name: listener1
      address:
        socket_address: { address: 0.0.0.0, port_value: 8080 }
      filter_chains:
        - filters:
            - name: envoy.http_connection_manager
              typed_config:
                "@type": type.googleapis.com/envoy.config.filter.network.http_connection_manager.v2.HttpConnectionManager
                stat_prefix: grpc_json
                codec_type: AUTO
                route_config:
                  name: local_route
                  virtual_hosts:
                    - name: local_service
                      domains: ["*"]
                      routes:
                        - match: { prefix: "/" }
                          route: { cluster: registry-server, timeout: { seconds: 60 } }
                      cors:
                        allow_origin: ["*"]
                        allow_methods: GET, PUT, DELETE, POST, OPTIONS
                        allow_headers: authorization, keep-alive,user-agent,cache-control,content-type,content-transfer-encoding,custom-header-1,x-accept-content-transfer-encoding,x-accept-response-streaming,x-user-agent,x-grpc-web,grpc-timeout
                        max_age: "1728000"
                        expose_headers: custom-header-1,grpc-status,grpc-message   
                http_filters:
                  - name: envoy.ext_authz
                    config:
                      grpc_service:
                        envoy_grpc:
                          cluster_name: authz-server
                        timeout: 0.5s
                  - name: envoy.cors
                  - name: envoy.grpc_json_transcoder
                    config:
                      proto_descriptor: "proto.pb"
                      services: ["google.cloud.apigee.registry.v1alpha1.Registry"]
                      print_options:
                        add_whitespace: true
                        always_print_primitive_fields: true
                        always_print_enums_as_ints: false
                        preserve_proto_field_names: false
                  - name: envoy.grpc_web
                  - name: envoy.router

  clusters:
    - name: registry-server
      connect_timeout: 1.25s
      type: logical_dns
      lb_policy: round_robin
      dns_lookup_family: V4_ONLY
      http2_protocol_options: {}
      load_assignment:
        cluster_name: registry-server
        endpoints:
          - lb_endpoints:
              - endpoint:
                  address:
                    socket_address:
                      address: 127.0.0.1
                      port_value: 8081
    - name: authz-server
      type: static
      http2_protocol_options: {}
      load_assignment:
        cluster_name: authz-server
        endpoints:
        - lb_endpoints:
          - endpoint:
              address:
                socket_address:
                  address: 127.0.0.1
                  port_value: 50051
      common_lb_config:
        healthy_panic_threshold:
          value: 50.0
      health_checks:
        - timeout: 1s
          interval: 600s
          interval_jitter: 1s
          no_traffic_interval: 600s
          unhealthy_threshold: 1
          healthy_threshold: 3
          grpc_health_check:
            service_name: "envoy.service.auth.v2alpha.Authorization"
            authority: "server.domain.com"
      connect_timeout: 0.25s
